# printers-container

./: .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  build.sh  cups-pdf-postprocess.sh  docker-entrypoint.sh  generate-client-setup.sh  podman-printers-updater-inside-pod  pyproject.toml  test_fa_icons.py  test_login.py
app/: driver_manager.py  main.py  printer_engine.py  user_manager.py
cups/: cups-pdf-postprocess.sh  cups-pdf.conf.template  cupsd.conf.template
samba/: smb.conf.template
scripts/: podman-printers-updater-inside-pod
ui/: angular.json  package.json  tsconfig.json
ui/src/: custom-service-worker.js  index.html  manifest.webmanifest  styles.sass
ui/src/app/: app.config.ts  app.html  app.sass  app.ts
ui/src/app/components/: admin-panel.component.ts  change-password.component.ts  index.ts  log-viewer.component.ts  login.component.ts  two-factor-setup.component.ts
ui/src/app/interfaces/: download.ts  formats.ts
ui/src/app/pipes/: speed.pipe.ts
ui/src/app/services/: auth.interceptor.ts  auth.service.ts  downloads.service.ts  index.ts  printers-socket.service.ts
